--- a/config.ini
+++ b/config.ini
@@ -5,6 +5,8 @@
 # This configuration file is useful as it allows the log & documentation of the actions taken during
 # a collection process and provides a record of the configuration specified by the user for re-creation purposes
 #
+# The config.ini will be copied to the output directory to preserve the commands passed to the tool
+#
 # Do not add any additional arguments to the configuration file, only modify existing variables.
 #
 
@@ -50,7 +52,9 @@ hashtype = md5
 # File Collection
 #
 # Specify a list of extensions to collect from. Below are sample extensions for quick reference,
-# sorted by type. You may specify any extension as long as it is assigned to `extensions`.
+# sorted by type. You may specify any extension as long as it is assigned to `extensions` and comma seperated.
+#
+# !!If it is not specified, then no documents will be collected!!
 #
 # Not case sensitive
 #
@@ -68,9 +72,12 @@ extensions = doc,docx,xls,xlsx,ppt,pptx,pdf,txt,rtf,tiff,ods,odt,odp,odb,odg,odf
 #
 # Add comma seperated list of usernames to search for. Is case sensitive.
 #
+# It will only grab appdata from these users! If you want everyone's appdata - you will need to run seperately
+# or not specify a certain user.
+#
 # Default:
 # target_users = None
-target_users = Frank,Matthew
+target_users = Matthew
 
 #
 # Collect documents for ONLY specified users?
@@ -81,7 +88,7 @@ target_users = Frank,Matthew
 # false will collect files for entire system
 #
 # default = false
-ext_for_users = true
+ext_for_users = false
 
 #
 # Enable Debug
