--- a/config/config.ini
+++ b/config/config.ini
@@ -1,4 +1,9 @@
 [Options]
+
+###########################
+# Overview of Config File #
+###########################
+
 #
 # Configure Optional Information
 #
@@ -7,8 +12,13 @@
 #
 # The config.ini will be copied to the output directory to preserve the commands passed to the tool
 #
-# Do not add any additional arguments to the configuration file, only modify existing variables.
-#
+# !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+# !!!Do not add any additional arguments to the configuration file, only modify existing variables.!!!
+# !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+
+####################
+# Case Information #
+####################
 
 #
 # Case Number
@@ -17,7 +27,7 @@
 # ie. FI-20120201-100
 # Default:
 # case_number = LCDIC_COLLECTION
-case_number = FI-20150225-48
+case_number = FI-20150415-10
 
 #
 # Evidence ID
@@ -37,16 +47,24 @@ eid = 48-HD-01
 # name = LCDIC
 name = CBRYCE
 
+######################
+# Collection Options #
+######################
+
 #
-# Hash Type
+# File System Artifact Collection
 #
-# Select the hash library to use.
-# Supports:
-# md5, sha1, sha256, sha512
+# Collect file system artifacts. At this time, it only supports Windows systems running NTFS. It collects $MFT,
+# $Logfile, and $USN Journal ($J)
 #
-# Default:
-# hashtype = md5
-hashtype = md5
+# This option will significantly increase collection time, though provides very valuable data. These files can be used
+# to determine timeline activity, mass deletion/creation events, and pther activity without a full acquisition using
+# tools such as ANJP. It is usually worth the time to collect this unless yo uare sure that file system information is
+# irrelevant (ie. a document or email collection).
+#
+# When in doubt, ask Jon, Alex or Joe what you should do.
+
+# todo add the variable in
 
 #
 # File Collection
@@ -66,8 +84,8 @@ hashtype = md5
 # executables: exe,bat,cmd,sh,pf
 #
 # Default:
-# extensions = None
-extensions = doc,docx,xls,xlsx,ppt,pptx,pdf,txt,rtf,tiff,ods,odt,odp,odb,odg,odf,fodt,fods,fodp,fodg,png,jpg,jpeg,mp3,m4a,wma,zip,tar,tgz,gz,7z,exe,bat,cmd,sh,pf
+extensions = None
+# extensions = doc,docx,xls,xlsx,ppt,pptx,pdf,txt,rtf,tiff,ods,odt,odp,odb,odg,odf,fodt,fods,fodp,fodg,png,jpg,jpeg,mp3,m4a,wma,zip,tar,tgz,gz,7z,exe,bat,cmd,sh,pf
 
 #
 # Add comma seperated list of usernames to search for. Is case sensitive.
@@ -77,7 +95,11 @@ extensions = doc,docx,xls,xlsx,ppt,pptx,pdf,txt,rtf,tiff,ods,odt,odp,odb,odg,odf
 #
 # Default:
 # target_users = None
-target_users = Matthew
+target_users = hgregal
+
+#########################
+# Configuration Options #
+#########################
 
 #
 # Collect documents for ONLY specified users?
@@ -88,7 +110,18 @@ target_users = Matthew
 # false will collect files for entire system
 #
 # default = false
-ext_for_users = false
+ext_for_users = true
+
+#
+# Hash Type
+#
+# Select the hash library to use.
+# Supports:
+# md5, sha1, sha256, sha512
+#
+# Default:
+# hashtype = md5
+hashtype = md5
 
 #
 # Enable Debug
