check-in, basic win7 support

--- a/collection_options.cfg
+++ b/collection_options.cfg
@@ -14,7 +14,7 @@
 ##
 # Basic case information:
 ##
-
+[Case Information]
 # Case Number
 case_number = FI-20150416-01
 
@@ -25,9 +25,23 @@ evidence_number = 01-HD-01
 examiner_name = cbryce
 
 ##
+# Script Options
+##
+[Script Options]
+
+# Platform of the target drive
+# Currently supports: win7, winxp
+platform = win7
+
+# Hash algorithm to use
+# Currently supports: md5, sha1, sha256, sha512
+hash_type = md5
+
+
+##
 # User  Data Collection
 ##
-
+[User Collection]
 # This allows the collection of user data
 
 # Enable user collection?
