--- a/collection_options.cfg
+++ b/collection_options.cfg
@@ -10,6 +10,7 @@
 # Things to know:
 # - Do not change the variable names in the config file, instead only change the value (after the `=` sign)
 # - Any item starting with `#` is a comment. Feel free to add to the documentation!
+# - True or False values must be lowercase!
 
 ##
 # Basic case information:
@@ -36,6 +37,21 @@ platform = win7
 # Hash algorithm to use
 # Currently supports: md5, sha1, sha256, sha512
 hash_type = md5
+
+
+##
+# System Collection
+##
+[System Collection]
+
+# Collect Registry File
+collect_registry = true
+
+# Collect Event Logs
+collect_event_logs = true
+
+# Collect USB Files
+collect_usb_files = true
 
 
 ##
